--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,10 @@
         </nav>
     </header>
     <main class="flex-grow-1">
-        {% block content %}{% endblock %}
+        {% block content %}
+        
+        
+        {% endblock %}
     </main>
     <footer class="mt-4">
         <p>&copy; 2023 My Site</p>
