edit script imports

--- a/countdown/templates/lettersgame.html
+++ b/countdown/templates/lettersgame.html
@@ -16,6 +16,6 @@ Letters Game
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block extra_scripts %}
 <script src="{% static 'js/lettersgame.js' %}"></script>
 {% endblock %}
