--- a/countdown/templates/lettersgame.html
+++ b/countdown/templates/lettersgame.html
@@ -12,7 +12,12 @@ Letters Game
 <div id="game">
     <button id="vowel-btn">Vowel</button>
     <button id="consonant-btn">Consonant</button>
+    <br><br><br>
     <div id="selected-letters"></div>
+    <br><br>
+    <input type="text" id="guess-input" placeholder="Enter your guess">
+    <button id="submit-guess-btn">Submit Guess</button>
+    <div id="guess-result"></div>
 </div>
 {% endblock %}
 
