--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -156,20 +156,39 @@ form a:hover {
     text-decoration: underline;
 }
 /* letters.css */
+h1,p {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+}
 #game {
     text-align: center;
     margin-top: 50px;
 }
 
-button {
+button, input {
     padding: 10px 20px;
     margin: 10px;
     font-size: 16px;
     cursor: pointer;
+    border: 1px inset var(--electric-blue);
+    background-color: var(--delft-blue);
+    color: var(--white);
 }
 
 #selected-letters {
     margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
+    border: 1px inset var(--electric-blue);
+    background-color: var(--delft-blue);
+    color: var(--white);
+}
+#selected-letters {
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid var(--tang-blue);
+    border-radius: 5px;
 }
