--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -158,7 +158,6 @@ form a:hover {
 /* letters.css */
 #game {
     text-align: center;
-    margin-top: 50px;
 }
 
 button {
@@ -172,4 +171,37 @@ button {
     margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
+}
+
+.number-tiles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.tile {
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    background-color: var(--tang-blue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.tile.revealed {
+    background-color: var(--delft-blue);
+    cursor: default;
+    color: var(--white);
+    font-family: var(--primary-font);
+    font-weight: 800;
+}
+
+#target-number {
+    font-size: 48px;
+    font-weight: bold;
+    margin-top: 20px;
 }
