--- a/templates/base.html
+++ b/templates/base.html
@@ -33,13 +33,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="" style="color: var(--white);">Home</a>
+                            <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="" style="color: var(--white);">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="" style="color: var(--white);">About</a>
+                            <a class="nav-link {% if request.path == '/countdown/letters/' %}active{% endif %}" href="{% url 'lettersGame' %}" style="color: var(--white);">Letters Game</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="" style="color: var(--white);">Contact</a>
+                            <a class="nav-link {% if request.path == '/countdown/numbers/' %}active{% endif %}" href="{% url 'numbersGame' %}" style="color: var(--white);">Numbers Game</a>
                         </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item">
@@ -74,7 +74,7 @@
     </script>
     <!-- Custom JavaScript -->
     <script src="{% static 'js/scripts.js' %}"></script>
-    {% block extra_scripts %}{% endblock %}
+    {% block scripts %}{% endblock %}
 </body>
 
 </html>
