fix: rename block from extra_scripts to scripts in lettersgame.html

--- a/countdown/templates/lettersgame.html
+++ b/countdown/templates/lettersgame.html
@@ -21,6 +21,6 @@ Letters Game
 </div>
 {% endblock %}
 
-{% block extra_scripts %}
+{% block scripts %}
 <script src="{% static 'js/lettersgame.js' %}"></script>
 {% endblock %}
