correct error in tablehead

--- a/countdown/templates/scoreboard.html
+++ b/countdown/templates/scoreboard.html
@@ -8,6 +8,8 @@
             <tr>
                 <th>Player</th>
                 <th>Score</th>
+                <th>Initials</th>
+                <th>Date</th>
             </tr>
         </thead>
         <tbody>
