--- a/countdown/templates/lettersgame.html
+++ b/countdown/templates/lettersgame.html
@@ -8,7 +8,26 @@ Letters Game
 {% block content %}
 <h1>Welcome to the Letters Game</h1>
 <p>Enjoy playing the game!</p>
-
+<center>
+<div class="clock">
+    <div class="clock-face">
+        <div class="hand second-hand"></div>
+        <div class="hour-mark" style="transform: rotate(30deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(60deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(90deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(120deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(150deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(180deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(210deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(240deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(270deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(300deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(330deg) translate(0, -130px);"></div>
+        <div class="hour-mark" style="transform: rotate(360deg) translate(0, -130px);"></div>
+    </div>
+</div>
+<button id="start-timer">Start 30-Second Timer</button>
+</center>
 <div id="game">
     <button id="vowel-btn">Vowel</button>
     <button id="consonant-btn">Consonant</button>
@@ -23,4 +42,5 @@ Letters Game
 
 {% block scripts %}
 <script src="{% static 'js/lettersgame.js' %}"></script>
+<script src="{% static 'js/clock.js' %}"></script>
 {% endblock %}
