--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -180,7 +180,6 @@ button, input {
     margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
-<<<<<<< HEAD
 }
 
 .number-tiles {
@@ -215,16 +214,56 @@ button, input {
     font-weight: bold;
     margin-top: 20px;
 }
-=======
-    border: 1px inset var(--electric-blue);
-    background-color: var(--delft-blue);
-    color: var(--white);
+/* clock interface css */
+.clock {
+    width: 300px;
+    height: 300px;
+    border: 20px solid black;
+    border-radius: 50%;
+    position: relative;
+    padding: 2rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    background: white;
+    
 }
-#selected-letters {
-    display: inline-block;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid var(--tang-blue);
-    border-radius: 5px;
+
+.clock-face {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform: translateY(-3px); /* account for the height of the clock hands */
+ 
 }
->>>>>>> main
+
+.hand {
+    width: 50%;
+    background: black;
+    position: absolute;
+    top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.second-hand {
+    height: 2px;
+}
+
+.minute-hand {
+    height: 4px;
+}
+
+.hour-hand {
+    height: 6px;
+}
+
+.hour-mark {
+    width: 4px;
+    height: 20px;
+    background: black;
+    position: absolute;
+    top: 45%;
+    left: 49%;
+    transform-origin: center bottom;
+}
