add scoreboard section to numbers game template

--- a/countdown/templates/numbersgame.html
+++ b/countdown/templates/numbersgame.html
@@ -47,6 +47,30 @@ Numbers Game
         <div class="tile" data-type="low"></div>
     </div>
 </div>
+<div class="scoreboard">
+    <h1>Scoreboard</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Score</th>
+                <th>Initials</th>
+                <th>Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for player in players %}
+            <tr>
+                <td>{{ player.name }}</td>
+                <td>{{ player.score }}</td>
+                <td>{{ player.intials }}</td>
+                <td>{{ player.game_date }}</td>
+                <td></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
 
 {% block scripts %}
