--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="" style="color: var(--white);">Home</a>
+                            <a class="nav-link {% if request.path == '/countdown/' %}active{% endif %}" href="{% url 'home' %}" style="color: var(--white);">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if request.path == '/countdown/letters/' %}active{% endif %}" href="{% url 'lettersGame' %}" style="color: var(--white);">Letters Game</a>
