--- a/countdown/templates/home.html
+++ b/countdown/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Welcome to the Home Page</h1>
+<h1>Welcome to the {% block title %}Home{% endblock %} Page</h1>
 <p>This is the home page of your Django application.</p>
 {% endblock %}
