--- a/countdown/templates/numbersgame.html
+++ b/countdown/templates/numbersgame.html
@@ -8,11 +8,11 @@ Numbers Game
 {% block content %}
 
 
-<div id="game">
+<div id="numbers-game">
     <h1>Welcome to the Numbers Game</h1>
     <p>Pick 6 numbers in total. You can pick from 4 high numbers (25, 50, 75, 100) and numbers 1-10.</p>
     <h3 id="target-number-title"></h3>
-    <div id="target-number"></div>
+    <div id="target-number" class="hidden"></div>
     <h3>Selected Numbers</h3>
     <div id="selected-numbers" class="number-tiles"></div>
 
@@ -24,7 +24,7 @@ Numbers Game
         <div class="tile" data-type="high"></div>
     </div>
     <h4>Small Numbers</h4>
-    <div id="low-numbers" class="number-tiles">
+    <div id="low-numbers" class="number-tiles grid">
         <div class="tile" data-type="low"></div>
         <div class="tile" data-type="low"></div>
         <div class="tile" data-type="low"></div>
