--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -162,9 +162,17 @@ h1,p {
     margin-bottom: 20px;
     text-align: center;
 }
+
 #game {
     text-align: center;
-    margin-top: 50px;
+}
+
+#numbers-game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 button, input {
@@ -181,14 +189,115 @@ button, input {
     margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
+}
+
+.number-tiles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+}
+
+.tile {
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    background-color: var(--tang-blue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.tile.revealed {
+    background-color: var(--delft-blue);
+    cursor: default;
+    color: var(--white);
+    font-family: var(--primary-font);
+    font-weight: 800;
+}
+
+#target-number {
+    font-size: 48px;
+    font-weight: bold;
+    margin-top: 20px;
     border: 1px inset var(--electric-blue);
     background-color: var(--delft-blue);
     color: var(--white);
+    padding: 10px 20px;
+    text-align: center;
 }
+
 #selected-letters {
     display: inline-block;
     margin: 10px;
     padding: 10px;
     border: 1px solid var(--tang-blue);
     border-radius: 5px;
+}
+
+.hidden {
+    display: none;
+}
+
+
+/* clock interface css */
+.clock {
+    width: 300px;
+    height: 300px;
+    border: 20px solid black;
+    border-radius: 50%;
+    position: relative;
+    padding: 2rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    background: white;
+    
+}
+
+.clock-face {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform: translateY(-3px); /* account for the height of the clock hands */
+ 
+}
+
+.hand {
+    width: 50%;
+    background: black;
+    position: absolute;
+    top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.second-hand {
+    height: 2px;
+}
+
+.minute-hand {
+    height: 4px;
+}
+
+.hour-hand {
+    height: 6px;
+}
+
+.hour-mark {
+    width: 4px;
+    height: 20px;
+    background: black;
+    position: absolute;
+    top: 45%;
+    left: 49%;
+    transform-origin: center bottom;
 }
