--- a/countdown/templates/numbersgame.html
+++ b/countdown/templates/numbersgame.html
@@ -8,11 +8,33 @@ Numbers Game
 {% block content %}
 
 
+   
+
+
 <div id="numbers-game">
     <h1>Welcome to the Numbers Game</h1>
     <p>Pick 6 numbers in total. You can pick from 4 high numbers (25, 50, 75, 100) and numbers 1-10.</p>
     <h3 id="target-number-title"></h3>
     <div id="target-number" class="hidden"></div>
+
+    <div class="clock">
+        <div class="clock-face">
+            <div class="hand second-hand"></div>
+            <div class="hour-mark" style="transform: rotate(30deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(60deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(90deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(120deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(150deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(180deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(210deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(240deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(270deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(300deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(330deg) translate(0, -130px);"></div>
+            <div class="hour-mark" style="transform: rotate(360deg) translate(0, -130px);"></div>
+        </div>
+    </div>
+    <button id="start-timer">Start 30-Second Timer</button>
     <h3>Selected Numbers</h3>
     <div id="selected-numbers" class="number-tiles"></div>
 
@@ -23,6 +45,7 @@ Numbers Game
         <div class="tile" data-type="high"></div>
         <div class="tile" data-type="high"></div>
     </div>
+    
     <h4>Small Numbers</h4>
     <div id="low-numbers" class="number-tiles grid">
         <div class="tile" data-type="low"></div>
@@ -75,4 +98,5 @@ Numbers Game
 
 {% block scripts %}
 <script src="{% static 'js/numbersgame.js' %}"></script>
+<script src="{% static 'js/clock.js' %}"></script>
 {% endblock %}
