--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg mb-4">
             <div class="container-fluid">
-                <a class="navbar-brand" href="" style="color: var(--white);">My Site</a>
+                <a class="navbar-brand" href="" style="color: var(--white);">The Final Jardown</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
