feat: migrate scoreboard model and modify home layout

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -247,6 +247,12 @@ button, input {
     display: none;
 }
 
+/* homepage width */
+.home-container{
+    max-width: 900px;
+    margin: auto;
+}
+
 
 /* clock interface css */
 .clock {
