Fix: Navbar toggle contrast using the navbar-dark class

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
 
 <body class="d-flex flex-column min-vh-100">
     <header>
-        <nav class="navbar navbar-expand-lg mb-4">
+        <nav class="navbar navbar-dark navbar-expand-lg mb-4">
             <div class="container-fluid">
-                <a class="navbar-brand" href="" style="color: var(--white);">The Final Jardown</a>
+                <a class="navbar-brand display-5" href="" style="color: var(--white);">The Final Jardown</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
