fix: correct team name capitalization and improve description in home page

--- a/countdown/templates/home.html
+++ b/countdown/templates/home.html
@@ -14,11 +14,8 @@
         <a href="{% url 'numbersGame' %}" class="btn btn-primary">Numbers</a>
     </div>
     <hr class="my-5">
-    <h2 class="text-center mt-5 display-5">About Team Jar</h2>
-    <p>Team Jar is a group of developers who have come together to create a web application that allows users to
-        play
-        games
-        inspired by the popular British game show, Countdown.</p>
+    <h2 class="text-center mt-5 display-5">About Team JAR</h2>
+    <p>Team JAR is a group of developers who have come together to create a web application that allows users to play games inspired by the popular British game show, Countdown.</p>
     <p>Click on our names to view our GitHub profiles</p>
     <div class="githubs row justify-content-around">
         <div class="col-md-4 text-center">
