--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
+{% url 'home' as home %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -33,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/countdown/' %}active{% endif %}"
+                            <a class="nav-link {% if request.path == home %}active{% endif %}"
                                 href="{% url 'home' %}" style="color: var(--white);">Home</a>
                         </li>
                         <li class="nav-item">
