--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,11 @@
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
+{% url 'home' as home %}
+{% url 'profile' as profile_url %}
+{% url 'edit_profile' as edit_profile_url %}
+{% url 'delete_profile' as delete_profile_url %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,9 +28,9 @@
 
 <body class="d-flex flex-column min-vh-100">
     <header>
-        <nav class="navbar navbar-expand-lg mb-4">
+        <nav class="navbar navbar-dark navbar-expand-lg mb-4">
             <div class="container-fluid">
-                <a class="navbar-brand" href="" style="color: var(--white);">My Site</a>
+                <a class="navbar-brand display-5" href="{% url 'home' %}" style="color: var(--white);">The Final Jardown</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,24 +38,42 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/countdown/' %}active{% endif %}" href="{% url 'home' %}" style="color: var(--white);">Home</a>
+                            <a class="nav-link {% if request.path == home %}active{% endif %}"
+                                href="{% url 'home' %}" style="color: var(--white);">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/countdown/letters/' %}active{% endif %}" href="{% url 'lettersGame' %}" style="color: var(--white);">Letters Game</a>
+                            <a class="nav-link {% if request.path == '/countdown/letters/' %}active{% endif %}"
+                                href="{% url 'lettersGame' %}" style="color: var(--white);">Letters Game</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/countdown/numbers/' %}active{% endif %}" href="{% url 'numbersGame' %}" style="color: var(--white);">Numbers Game</a>
+                            <a class="nav-link {% if request.path == '/countdown/numbers/' %}active{% endif %}"
+                                href="{% url 'numbersGame' %}" style="color: var(--white);">Numbers Game</a>
                         </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}" style="color: var(--white);">Logout</a>
+                            <a class="nav-link {% if request.path == profile_url %}active{% endif %}"
+                                href="{% url 'profile' %}" style="color: var(--white);">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == edit_profile_url %}active{% endif %}"
+                                href="{% url 'edit_profile' %}" style="color: var(--white);">Edit Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == delete_profile_url %}active{% endif %}"
+                                href="{% url 'delete_profile' %}" style="color: var(--white);">Delete Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == logout_url %}active{% endif %}"
+                                href="{% url 'account_logout' %}" style="color: var(--white);">Logout</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}" style="color: var(--white);">Register</a>
+                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}"
+                                href="{% url 'account_signup' %}" style="color: var(--white);">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'account_login' %}" style="color: var(--white);">Login</a>
+                            <a class="nav-link {% if request.path == login_url %}active{% endif %}"
+                                href="{% url 'account_login' %}" style="color: var(--white);">Login</a>
                         </li>
                         {% endif %}
                     </ul>
@@ -60,18 +83,20 @@
     </header>
     <main class="flex-grow-1">
         {% block content %}
-        
-        
+
+
         {% endblock %}
     </main>
     <footer class="mt-4">
-        <p>&copy; 2025 My Site</p>
+        <p>&copy; 2025 Team JAR</p>
     </footer>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+        </script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/233469295e.js" crossorigin="anonymous"></script>
     <!-- Custom JavaScript -->
     <script src="{% static 'js/scripts.js' %}"></script>
     {% block scripts %}{% endblock %}
