--- a/countdown/templates/lettersgame.html
+++ b/countdown/templates/lettersgame.html
@@ -30,16 +30,16 @@ Letters Game
             <div class="hour-mark" style="transform: rotate(360deg) translate(0, -130px);"></div>
         </div>
     </div>
-    <button id="start-timer">Start 30-Second Timer</button>
+    <button id="start-timer" class="letters-buttons">Start 30-Second Timer</button>
 </center>
 <div id="game">
-    <button id="vowel-btn">Vowel</button>
-    <button id="consonant-btn">Consonant</button>
+    <button id="vowel-btn" class="letters-buttons">Vowel</button>
+    <button id="consonant-btn" class="letters-buttons">Consonant</button>
     <br><br><br>
     <div id="selected-letters"></div>
     <br><br>
-    <input type="text" id="guess-input" placeholder="Enter your guess">
-    <button id="submit-guess-btn">Submit Guess</button>
+    <input type="text" id="guess-input" class="letters-buttons" placeholder="Enter your guess">
+    <button id="submit-guess-btn" class="letters-buttons">Submit Guess</button>
     <div id="guess-result"></div>
 </div>
 {% endblock %}
