--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -187,9 +187,13 @@ h1,p {
     margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
 }
 
-.number-tiles {
+.number-tiles, {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -198,8 +202,8 @@ h1,p {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .tile {
@@ -231,14 +235,6 @@ h1,p {
     color: var(--white);
     padding: 10px 20px;
     text-align: center;
-}
-
-#selected-letters {
-    display: inline-block;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid var(--tang-blue);
-    border-radius: 5px;
 }
 
 .hidden {
