--- a/countdown/templates/edit_profile.html
+++ b/countdown/templates/edit_profile.html
@@ -10,7 +10,7 @@ Edit Profile
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Save changes</button>
+    <button type="submit" class="btn btn-primary">Save changes</button>
+    <a href="{% url 'profile' %}" class="btn btn-secondary">Cancel</a>
 </form>
-<a href="{% url 'profile' %}">Cancel</a>
 {% endblock %}
