--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -48,7 +48,6 @@ footer {
     padding: 1rem;
 }
 
-
 /* Common Form Styles */
 form {
     display: flex;
@@ -56,9 +55,9 @@ form {
     max-width: 400px;
     margin: 30px auto;
     padding: 20px;
-    background-color: var(--white); /* Use container color */
+    background-color: var(--white);
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1); /* Use shadow color */
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
 }
 
 form h1 {
@@ -66,34 +65,33 @@ form h1 {
     color: var(--delft-blue);
     text-align: center;
     font-size: 2rem;
-    color: var(--delft-blue); /* Use primary color */
-    text-align: center;
     margin-bottom: 20px;
 }
 
 form label {
     font-weight: bold;
-    color: var(--delft-blue); /* Use font color */
+    color: var(--delft-blue);
 }
 
 form input[type="text"],
 form input[type="password"],
-form input[type="email"] {
+form input[type="email"],
+form input[type="date"],
+form textarea {
     font-family: var(--primary-font);
     padding: 0.75rem;
     margin-bottom: 1rem;
     border: 1px solid var(--delft-blue);
     border-radius: 5px;
     width: 100%;
-    padding: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.1); /* Use shadow color */
-    border-radius: 5px;
-    box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.1); /* Use shadow color */
+    box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
 form input[type="text"]:focus,
 form input[type="password"]:focus,
-form input[type="email"]:focus {
+form input[type="email"]:focus,
+form input[type="date"]:focus,
+form textarea:focus {
     border-color: var(--tang-blue);
     outline: none;
 }
@@ -105,10 +103,7 @@ form .btn {
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
-    padding: 10px;
     margin-top: 10px;
-    border: none;
-    border-radius: 5px;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -116,8 +111,6 @@ form .btn {
 form .btn-primary {
     background-color: var(--tang-blue);
     color: var(--white);
-    background-color: var(--tang-blue); /* Use primary color */
-    color: var(--white); /* Use secondary color */
 }
 
 form .btn-primary:hover {
@@ -130,8 +123,6 @@ form .btn-secondary {
     text-align: center;
     display: block;
     margin-bottom: 1rem;
-    background-color: var(--electric-blue); /* Use secondary color */
-    color: var(--white); /* Use primary color */
 }
 
 form .btn-secondary:hover {
@@ -146,15 +137,16 @@ form a {
     display: block;
     text-align: center;
     margin-top: 10px;
-    color: var(--tang-blue); /* Use primary color */
+    color: var(--tang-blue);
     text-decoration: none;
 }
 
 form a:hover {
     text-decoration: underline;
 }
+
 /* letters.css */
-h1,p {
+h1, p {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
@@ -193,7 +185,7 @@ h1,p {
     justify-content: center;
 }
 
-.number-tiles, {
+.number-tiles {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -242,17 +234,10 @@ h1,p {
 }
 
 /* homepage width */
-.home-container{
+.home-container {
     max-width: 900px;
     margin: auto;
 }
-
-/* homepage width */
-.home-container{
-    max-width: 900px;
-    margin: auto;
-}
-
 
 /* clock interface css */
 .clock {
@@ -271,7 +256,6 @@ h1,p {
     width: 100%;
     height: 100%;
     transform: translateY(-3px); /* account for the height of the clock hands */
- 
 }
 
 .hand {
