--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -58,7 +58,8 @@ form {
     padding: 20px;
     background-color: var(--white); /* Use container color */
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1); /* Use shadow color */
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
+     /* Use shadow color */
 }
 
 form h1 {
@@ -99,6 +100,7 @@ form input[type="email"]:focus {
     border-color: var(--tang-blue);
     outline: none;
 }
+
 
 form .btn {
     font-family: var(--primary-font);
