--- a/countdown/templates/profile.html
+++ b/countdown/templates/profile.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 
+{% block title %}
+Profile
+{% endblock %}
 {% block content %}
 <h1>Profile</h1>
 <p><strong>Username:</strong> {{ profile.user.username }}</p>
