--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -7,6 +7,7 @@
     --picton-blue: #44b6fc;
     --electric-blue: #3de1f2;
     --white: #ffffff;
+    --danger-red: #dc3545;
 }
 
 /* Navigation Bar */
@@ -58,7 +59,6 @@ form {
     background-color: var(--white);
     border-radius: 10px;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
-
 }
 
 form h1 {
@@ -97,7 +97,6 @@ form textarea:focus {
     outline: none;
 }
 
-
 form .btn {
     font-family: var(--primary-font);
     padding: 0.75rem;
@@ -129,6 +128,15 @@ form .btn-secondary {
 
 form .btn-secondary:hover {
     background-color: var(--picton-blue);
+}
+
+form .btn-danger {
+    background-color: var(--danger-red);
+    color: var(--white);
+}
+
+form .btn-danger:hover {
+    background-color: #bb2c3a
 }
 
 form .btn:hover {
