add profile styles

--- a/countdown/templates/profile.html
+++ b/countdown/templates/profile.html
@@ -6,9 +6,9 @@ Profile
 {% endblock %}
 {% block content %}
 <h1>Profile</h1>
-<p><strong>Username:</strong> {{ profile.user.username }}</p>
-<p><strong>Email:</strong> {{ profile.user.email }}</p>
-<p><strong>Bio:</strong> {{ profile.bio }}</p>
-<p><strong>Location:</strong> {{ profile.location }}</p>
-<p><strong>Birth Date:</strong> {{ profile.birth_date }}</p>
+<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Username:</strong> {{ profile.user.username }}</p>
+<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Email:</strong> {{ profile.user.email }}</p>
+<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Bio:</strong> {{ profile.bio }}</p>
+<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Location:</strong> {{ profile.location }}</p>
+<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px"><strong>Birth Date:</strong> {{ profile.birth_date }}</p>
 {% endblock %}
