add view for scoreboard

--- a/countdown/templates/scoreboard.html
+++ b/countdown/templates/scoreboard.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<center>
 <div class="scoreboard">
     <h1>Scoreboard</h1>
     <table>
@@ -26,3 +27,4 @@
     </table>
 </div>
 {% endblock %}
+</center>
