add profile image and styling to profile page

--- a/countdown/templates/edit_profile.html
+++ b/countdown/templates/edit_profile.html
@@ -6,8 +6,7 @@ Edit Profile
 {% endblock %}
 
 {% block content %}
-
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <h1>Edit Profile</h1>
     {% csrf_token %}
     {{ form.as_p }}
