--- a/countdown/templates/profile.html
+++ b/countdown/templates/profile.html
@@ -4,11 +4,29 @@
 {% block title %}
 Profile
 {% endblock %}
+
 {% block content %}
-<h1>Profile</h1>
-<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Username:</strong> {{ profile.user.username }}</p>
-<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Email:</strong> {{ profile.user.email }}</p>
-<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Bio:</strong> {{ profile.bio }}</p>
-<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px;"><strong>Location:</strong> {{ profile.location }}</p>
-<p style="padding:15px;background-color:lightblue;border: 2px inset black;margin:10px 450px"><strong>Birth Date:</strong> {{ profile.birth_date }}</p>
+<div class="profile-container">
+    <h1>Profile</h1>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <div class="image-container text-center">
+                {% if "placeholder" in profile.profile_pic.url %}
+                <img src="{% static 'images/default_profile.jpg' %}" alt="default profile image" class="img-fluid rounded-circle">
+                {% else %}
+                <img src="{{ profile.profile_pic.url }}" alt="{{ user.username }}'s profile image" class="img-fluid rounded-circle">
+                {% endif %}
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <div class="profile-info">
+                <p><strong>Username:</strong> {{ profile.user.username }}</p>
+                <p><strong>Email:</strong> {{ profile.user.email }}</p>
+                <p><strong>Bio:</strong> {{ profile.bio }}</p>
+                <p><strong>Location:</strong> {{ profile.location }}</p>
+                <p><strong>Birth Date:</strong> {{ profile.birth_date }}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
